--- a/style.css
+++ b/style.css
@@ -42,13 +42,14 @@ input, select { width: 100%; padding: 12px; margin-bottom: 12px; border: 1px sol
 .btn-close-text { background: none; border: none; color: #cc0000; margin-top: 15px; cursor: pointer; text-decoration: underline; width: 100%; }
 
 /* Color por defecto de las pestañas (Gris o azul oscuro) */
-.tab-button {
+.tab-btn {
     background-color: #2c3e50; 
     color: white;
 }
 
 /* Color cuando la pestaña está activa (El verde de tu imagen) */
-.tab-button.active {
+.tab-btn.active {
     background-color: #8db600 !important; /* El color verde que ves en la foto */
     color: black;
 }
+
